grammar.js
    source_file: $ => optional(seq(
      repeat(';'),
      $.statement,
      repeat(seq(repeat1(';'), $.statement)),
      repeat(';')
    )),

    statement: $ => choice(
        $.query_expression,
        $.create_table_statement,
        $.create_view_statement,
        $.create_function_statement,
        $.insert_statement,
        $.delete_statement,
        $.update_statement,
        $.merge_statement,
        $.drop_statement,
        $.declare_statement,
        $.set_statement,
        $.create_schema_statement,
        $.assert_statement,
        $.execute_immediate_statement,
        $.call_statement,
        $.begin_block,
        $.if_statement,
    ),

    // --- DDL ---

    query_expression: $ => seq(
      optional($.with_clause),
      choice($.select_statement, $.from_clause, $.set_operation, $.subquery),
      repeat($.pipe_operation)
    ),

    // SELECT ... UNION ALL SELECT ..., (SELECT ...) EXCEPT DISTINCT (SELECT ...)
    _select_item: $ => choice($.alias_expression, $.select_star),

    // *, t.*, * EXCEPT (a, b), * REPLACE (x + 1 AS x)
    from_clause: $ => prec.right(seq(
      $.keyword_from,
      $.table_expression,
      repeat(choice(
        seq(',', $.table_expression),
        $.join_clause
      ))
    )),

    group_by_clause: $ => seq($.keyword_group, $.keyword_by, choice($.keyword_all, commaSep1($.expression))),
    order_by_clause: $ => seq($.keyword_order, $.keyword_by, commaSep1($.order_expression)),
    pipe_operation: $ => seq(
      '|>',
      choice(
        $.pipe_select, $.pipe_extend, $.pipe_set, $.pipe_drop,
        $.pipe_rename, $.pipe_where, $.pipe_aggregate, $.pipe_join,
        $.pipe_limit, $.pipe_order_by, $.pipe_window, $.pipe_call,
        $.pipe_pivot
      )
    ),

    pipe_select: $ => prec.right(seq($.keyword_select, optional($.keyword_distinct), commaSepTrail1($._select_item))),
    pipe_extend: $ => prec.right(seq($.keyword_extend, commaSepTrail1($.alias_expression))),
    pipe_aggregate: $ => prec.right(seq(
      $.keyword_aggregate,
      commaSepTrail1($.alias_expression),
      optional($.pipe_group_by_clause)
    )),
    pipe_where: $ => seq($.keyword_where, $.expression),
    pipe_join: $ => seq(
      choice(
        $.keyword_join,
        seq($.keyword_inner, $.keyword_join),
        seq($.keyword_left, optional($.keyword_outer), $.keyword_join),
        seq($.keyword_right, optional($.keyword_outer), $.keyword_join),
        seq($.keyword_full, optional($.keyword_outer), $.keyword_join),
        seq($.keyword_cross, $.keyword_join)
      ),
      $.table_expression,
      optional($.join_condition)
    ),

    table_expression: $ => prec.right(seq(
      choice($.identifier, $.function_call, $.subquery, $.unnest_expression, $.parenthesized_join),
      optional(seq($.keyword_for, $.keyword_system_time, $.keyword_as, $.keyword_of, $.expression)),
      optional($.tablesample_clause),
      optional(choice($.pivot_clause, $.unpivot_clause)),
      optional(seq(optional($.keyword_as), field('alias', $.identifier))),
      optional(choice($.pivot_clause, $.unpivot_clause)),
      optional(seq(
        $.keyword_with, $.keyword_offset,
        optional(seq(optional($.keyword_as), field('offset_alias', $.identifier)))
      ))
    )),

    // FROM (a CROSS JOIN b) LEFT JOIN c ...
    join_condition: $ => choice(
      seq($.keyword_on, $.expression),
      seq($.keyword_using, '(', commaSep1($.identifier), ')')
    ),

    alias_expression: $ => prec.right(seq(
      $.expression,
      optional(seq(optional($.keyword_as), field('alias', $.identifier)))
    )),

    order_expression: $ => seq(
      $.expression,
      optional(choice($.keyword_asc, $.keyword_desc)),
      optional(seq($.keyword_nulls, choice($.keyword_first, $.keyword_last)))
    ),

    expression: $ => choice(
      $.identifier, $.number, $.string, $.boolean, $.keyword_null, $.parameter,
      $.function_call,
      $.cast_expression,
      $.extract_expression,
      $.interval_expression,
      $.typed_literal,
      $.array_expression,
      $.struct_expression,
      $.tuple_expression,
      $.exists_expression,
      $.subscript_expression,
      $.field_access,
      $.unary_expression, $.binary_expression, $.is_expression,
      $.between_expression,
      $.in_expression,
      $.like_expression,
      $.case_expression,
      $.parenthesized_expression,
      $.subquery
    ),

    function_call: $ => seq(
      field('name', $.function_name),
      '(',
      optional(choice(
        $.star, // COUNT(*)
        seq(
          optional($.keyword_distinct),
          commaSep1(choice($.expression, $.named_argument, $.table_argument)),
          optional($.null_handling),
          optional(seq($.keyword_having, choice($.keyword_max, $.keyword_min), $.expression)),
          optional($.order_by_clause),
          optional($.limit_clause)
        )
      )),
      ')',
      optional($.over_clause)
    ),

    // ML.PREDICT(MODEL m, TABLE t)
    over_clause: $ => seq(
      $.keyword_over,
      choice(
        $.identifier, // named window
        seq('(', optional($._window_specification), ')')
      )
    ),

    _window_specification: $ => choice(
      seq(
        $.identifier,
        optional($.partition_by_clause),
        optional($.order_by_clause),
        optional($.window_frame)
      ),
      seq($.partition_by_clause, optional($.order_by_clause), optional($.window_frame)),
      seq($.order_by_clause, optional($.window_frame)),
      $.window_frame,
    ),

    binary_expression: $ => choice(
      ...[
        [PREC.mult, choice('*', '/', '%', '||')],
        [PREC.add, choice('+', '-')],
        [PREC.shift, choice('<<', '>>')],
        [PREC.bitand, '&'],
        [PREC.bitxor, '^'],
        [PREC.bitor, '|'],
        [PREC.compare, choice('=', '<', '>', '<=', '>=', '<>', '!=')],
        [PREC.and, $.keyword_and],
        [PREC.or, $.keyword_or],
      ].map(([p, op]) => prec.left(p, seq(
        field('left', $.expression),
        field('operator', op),
        field('right', $.expression)
      )))
    ),

    // x [NOT] BETWEEN y AND z
    function_name: $ => choice(prec(1, $.identifier), alias($.keyword_if, $.identifier)),

    // Keywords that are commonly also used as column / function names
    identifier: $ => choice(
      $._identifier,
      ...UNRESERVED.map(k => alias($['keyword_' + k.toLowerCase()], k.toLowerCase()))
    ),

    // A (possibly dotted) path: a.b.c, `proj.ds.tbl`, `proj`.`ds`.`tbl`, a.`b-c`
    _identifier: $ => token(prec(-1, seq(
      IDENT_PART,
      repeat(seq('.', IDENT_PART))
    ))),

    // Query parameters (@param) and system variables (@@var)
    number: $ => token(choice(/0[xX][0-9a-fA-F]+/, seq(
      choice(
        seq(/\d+/, optional(seq('.', optional(/\d+/)))), // Matches: 123, 123., 123.45
        seq('.', /\d+/)                                  // Matches: .45
      ),
      optional(seq(/[eE]/, optional(/[+-]/), /\d+/))     // Matches: e6, E-5, e+10
    ))),
    // '...', "...", '''...''', """...""" with optional r/b/rb/br prefix
    star: $ => '*',
